tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__LowVoltageTransf-AAAAAAAAAAAAAAAAAAAE8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1266,
  "prerequisites": [
    103
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It is possible to run MV machines while still in LV - build a transformer and use 4 power sources 32 EU/t to power one 128 EU/t machine.\n\nIt transforms power up or down, depending on the mode, which you can switch with a soft mallet. Step-up means 4A LV in, 1A MV out, while step-down means the reverse.\n\nMake sure you understand the following if you prefer your base not being a crater:\nA step-down mode is the default one. In this mode, the large dot is the input. In a step-up mode, it's the output. Do not mix it up. LV machines that receive MV power will explode.\n\nIf the transformer is connected to power, or was in the past, then do not change the mode with stuff connected. It's better to break and place it again to get rid of the stored power rather than rotate it with the wrench and blow things up. Make sure to also disconnect the nearby wires with a wire cutter.\n\nAs a reminder, machines don't blow up if they are given more amps than they can consume. They blow up from higher voltage tier.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Low Voltage Transformer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    103
  ],
  "rewards": [],
  "tasks": []
}
