tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__StoringandTransf-AAAAAAAAAAAAAAAAAAAAIQ==__MediumVoltageTra-AAAAAAAAAAAAAAAAAAAE8w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1267,
  "optional_prerequisites": [
    1266,
    1148
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "These work the same as the LV ones, but 1 tier higher.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Medium Voltage Transformer",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
